crates/ui-types/tests/compile-fail/noop_string_arg.rs
use poly_ui_types::{ui_noop, UiNoopReason};

fn main() {
    ui_noop!("DragHandle");
}
