crates/ui-types/tests/compile-fail/noop_string_arg.stderr
warning: unused import: `UiNoopReason`
 --> tests/compile-fail/noop_string_arg.rs:1:30
  |
1 | use poly_ui_types::{ui_noop, UiNoopReason};
  |                              ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
 --> tests/compile-fail/noop_string_arg.rs:4:14
  |
4 |     ui_noop!("DragHandle");
  |     ---------^^^^^^^^^^^^-
  |     |        |
  |     |        expected `UiNoopReason`, found `&str`
  |     arguments to this function are incorrect
  |
note: function defined here
 --> tests/compile-fail/noop_string_arg.rs:4:5
  |
4 |     ui_noop!("DragHandle");
  |     ^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `ui_noop` (in Nightly builds, run with -Z macro-backtrace for more info)
